local-infra/envoy-docker.yaml
# >>>>>>>>>>>>>>>>>>>> Use This config for deploying in docker <<<<<<<<<<<<<<<<

# admin web panel
admin:
  access_log_path: /var/log/admin_logs
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: first-listener
      address:
        socket_address:
          address: 0.0.0.0
          # TODO: Need to figure out why sometimes it fails to listen on port `80`
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: lb/reverse-proxy # this is just a prefix for any stats logging.
                upgrade_configs:
                - upgrade_type: websocket
                # For understaing routing.
                # https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/http/http_routing#http-routing
                # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/route_matching
                # https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_filters/router_filter#config-http-filters-router
                #https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/router/v3/router.proto#router
                request_timeout: 300s
                http_filters:
                  - name: envoy.filters.http.router
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /var/log/access_logs
                route_config:
                  name: all
                  virtual_hosts:
                    - name: pubotainment
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/api"
                          route:
                            cluster: pub-web
                            timeout: 300s #in prod, remove this. this value is just for local so as to simplify debugging.
                        - match:
                            prefix: "/"
                          route:
                            cluster: ui

  clusters:
    - name: pub-web
      connect_timeout: 2s
      # for understanding the below `type` field
      # https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/upstream/service_discovery#arch-overview-service-discovery-types
      # type: static
      type: strict_dns
      # type: logical_dns
      lb_policy: round_robin # this is also default value
      load_assignment:
        cluster_name: pub-web
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      # address: 192.168.65.2
                      # port_value: 5000
                      port_value: 8000 # Had to change this port from 5000 to 6002 as for some reason, `twitter-web` was not being accessed at 5000 from envoy running in docker container.
    - name: ui
      connect_timeout: 1s
      # type: static
      type: strict_dns
      load_assignment:
        cluster_name: fe
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # address: 127.0.0.1
                      address: host.docker.internal
                      port_value: 6000
